k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estudoapi
  labels:
    app: estudoapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estudoapi
  template:
    metadata:
      labels:
        app: estudoapi
    spec:
      containers:
      - name: estudoapi
        image: <SEU_REGISTRO>/estudoapi:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: estudoapi
spec:
  type: ClusterIP
  selector:
    app: estudoapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
