k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: productsdb
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: productsdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsdb
  template:
    metadata:
      labels:
        app: productsdb
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: dbdata
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: productsdb-pvc
